# Ataxx-game

./: CMakeLists.txt  README.md  main.cpp
src/Controller/: Game_Controller.cpp  Game_Controller.h  ObservableGame_Controller.cpp  ObservableGame_Controller.h
src/Model/: Grid_Model.h
src/View/: Console_View.cpp  Console_View.h  Qt_View.cpp  Qt_View.h
tools/Observer/: Observer.h  Subject.h
tools/ParseArgs/: ParseArgs.cpp  ParseArgs.h
tools/ParseArgs/getoptpp/: getopt_pp.cpp
